--- a/src/LOGO/LogoScene/Controls/DrawingScene.xaml
+++ b/src/LOGO/LogoScene/Controls/DrawingScene.xaml
@@ -12,8 +12,19 @@
         <viewmodels:DrawingSceneViewModel/>
     </UserControl.DataContext>
     <UserControl.Resources>
-        <PathGeometry x:Key="geometryPath" Figures="M0,0 L100,0 100,100 0,100 z"/>
+        <PathGeometry x:Key="geometryPath">
+            <PathFigure IsClosed="False" StartPoint="{Binding StartPointPath}">
+                <LineSegment Point="{Binding FinalPointPath}"/>
+            </PathFigure>
+        </PathGeometry>
     </UserControl.Resources>
+    
+    <Canvas Background="White" Height="450" Margin="0,0,0,-0.4" VerticalAlignment="Top">
+        <controls:TurtleControl x:Name="turtleControl" Canvas.Left="0" Width="{Binding TurtleWidth}" Height="{Binding TurtleHeight}" Canvas.Top="0"/>
+        <Line X1="100" Y1="0" X2="100" Y2="100" Stroke="Black"/>
+        <Button x:Name="buttonStop" Content="Button" Canvas.Left="590" Canvas.Top="170" Width="75"/>
+
+    </Canvas>
     <UserControl.Triggers>
         <EventTrigger RoutedEvent="FrameworkElement.Loaded">
             <BeginStoryboard x:Name="AnimateTrue">
@@ -21,13 +32,13 @@
                     <DoubleAnimationUsingPath SpeedRatio="{Binding SpeedRatio}"
                                               Storyboard.TargetName="turtleControl"
                                               Storyboard.TargetProperty="(Canvas.Left)"
-                                              RepeatBehavior="Forever"
+                                              RepeatBehavior="1x"
                                               PathGeometry="{StaticResource geometryPath}" Source="X"/>
                     <DoubleAnimationUsingPath 
                                               SpeedRatio="{Binding SpeedRatio}"
                                               Storyboard.TargetName="turtleControl"
                                               Storyboard.TargetProperty="(Canvas.Top)"
-                                              RepeatBehavior="Forever"
+                                              RepeatBehavior="1x"
                                               PathGeometry="{StaticResource geometryPath}" Source="Y"/>
                 </Storyboard>
             </BeginStoryboard>
@@ -36,11 +47,4 @@
             <StopStoryboard BeginStoryboardName="AnimateTrue"/>
         </EventTrigger>
     </UserControl.Triggers>
-    <Canvas Background="White" Height="450" Margin="0,0,0,-0.4" VerticalAlignment="Top">
-        <controls:TurtleControl x:Name="turtleControl" Canvas.Left="0" Width="36" Height="50" Canvas.Top="0"/>
-        <Path Stroke="Red" Data="{StaticResource geometryPath}" Canvas.Top="0" Canvas.Left="0"/>
-        <Line X1="100" Y1="100" x:Name="Line1" Stroke="Black"/>
-        <Button x:Name="buttonStop" Content="Button" Canvas.Left="590" Canvas.Top="170" Width="75"/>
-
-    </Canvas>
 </UserControl>
