--- a/src/LOGO/LogoScene/Controls/DrawingScene.xaml
+++ b/src/LOGO/LogoScene/Controls/DrawingScene.xaml
@@ -11,40 +11,46 @@
     <UserControl.DataContext>
         <viewmodels:DrawingSceneViewModel/>
     </UserControl.DataContext>
-    <UserControl.Resources>
-        <PathGeometry x:Key="geometryPath">
-            <PathFigure IsClosed="False" StartPoint="{Binding StartPointPath}">
-                <LineSegment Point="{Binding FinalPointPath}"/>
-            </PathFigure>
-        </PathGeometry>
-    </UserControl.Resources>
-    
+
     <Canvas Background="White" Height="450" Margin="0,0,0,-0.4" VerticalAlignment="Top">
-        <controls:TurtleControl x:Name="turtleControl" Canvas.Left="0" Width="{Binding TurtleWidth}" Height="{Binding TurtleHeight}" Canvas.Top="0"/>
+        <controls:TurtleControl x:Name="turtleControl" Canvas.Left="{Binding TurtleViewX, RelativeSource={RelativeSource Self}}" 
+                                Canvas.Top="{Binding TurtleViewY, RelativeSource={RelativeSource Self}}" />
+        
         <Line X1="100" Y1="0" X2="100" Y2="100" Stroke="Black"/>
         <Button x:Name="buttonStop" Content="Button" Canvas.Left="590" Canvas.Top="170" Width="75"/>
-
     </Canvas>
     <UserControl.Triggers>
         <EventTrigger RoutedEvent="FrameworkElement.Loaded">
             <BeginStoryboard x:Name="AnimateTrue">
                 <Storyboard>
-                    <DoubleAnimationUsingPath SpeedRatio="{Binding SpeedRatio}"
-                                              Storyboard.TargetName="turtleControl"
+                    <!--<DoubleAnimationUsingPath 
+                                              SpeedRatio="{Binding SpeedRatio}"
                                               Storyboard.TargetProperty="(Canvas.Left)"
                                               RepeatBehavior="1x"
                                               PathGeometry="{StaticResource geometryPath}" Source="X"/>
                     <DoubleAnimationUsingPath 
                                               SpeedRatio="{Binding SpeedRatio}"
-                                              Storyboard.TargetName="turtleControl"
                                               Storyboard.TargetProperty="(Canvas.Top)"
                                               RepeatBehavior="1x"
-                                              PathGeometry="{StaticResource geometryPath}" Source="Y"/>
+                                              PathGeometry="{StaticResource geometryPath}" Source="Y"/>-->
+                    <DoubleAnimation 
+                        SpeedRatio="{Binding SpeedRatio}"
+                        Storyboard.TargetName="turtleControl"
+                        Storyboard.TargetProperty="TurtleViewX"
+                        RepeatBehavior="1x"
+                        From="100"
+                        To="100"
+                        />
+                    <DoubleAnimation 
+                        SpeedRatio="{Binding SpeedRatio}"
+                        Storyboard.TargetName="turtleControl"
+                        Storyboard.TargetProperty="TurtleViewY"
+                        RepeatBehavior="1x"
+                        From="0"
+                        To="100"
+                        />
                 </Storyboard>
             </BeginStoryboard>
-        </EventTrigger>
-        <EventTrigger SourceName="buttonStop" RoutedEvent="ButtonBase.Click">
-            <StopStoryboard BeginStoryboardName="AnimateTrue"/>
         </EventTrigger>
     </UserControl.Triggers>
 </UserControl>
