--- a/src/LOGO/LogoScene/Controls/DrawingScene.xaml
+++ b/src/LOGO/LogoScene/Controls/DrawingScene.xaml
@@ -13,10 +13,7 @@
     </UserControl.DataContext>
 
     <Canvas Background="White" Height="450" Margin="0,0,0,-0.4" VerticalAlignment="Top">
-        <controls:TurtleControl x:Name="turtleControl" Canvas.Left="{Binding TurtleControlX}" 
-                                Canvas.Top="{Binding TurtleControlY}" 
-                                />
-        
+        <controls:TurtleControl x:Name="turtleControl" DataContext="{Binding TurtleViewModel}"/>
         <Line X1="100" Y1="0" X2="100" Y2="100" Stroke="Black"/>
         <Button x:Name="buttonStop" Content="Button" Canvas.Left="590" Canvas.Top="170" Width="75"/>
     </Canvas>
