-deleted redundant templates & changed virtual node representation

--- a/src/WpfControlsLib/Controls/Scene/Scene.xaml
+++ b/src/WpfControlsLib/Controls/Scene/Scene.xaml
@@ -23,6 +23,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
+        <Grid.Resources>
+            <ResourceDictionary>
+                <ResourceDictionary.MergedDictionaries>
+                    <ResourceDictionary Source="GeneralTemplate.xaml"/>
+                </ResourceDictionary.MergedDictionaries>
+            </ResourceDictionary>
+        </Grid.Resources>
         <Border BorderThickness="1"  Margin="2">
             <graphx:ZoomControl x:Name="zoomControl" AllowDrop="True">
                 <scene:GraphArea AllowDrop="True" x:Name="graphArea" />
