--- a/src/LOGO/LogoScene/View/Templates/GeneralTemplate.xaml
+++ b/src/LOGO/LogoScene/View/Templates/GeneralTemplate.xaml
@@ -16,18 +16,27 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="http://schemas.panthernet.ru/graphx/">
+    xmlns:controls="http://schemas.panthernet.ru/graphx/"
+    xmlns:scene="clr-namespace:WpfControlsLib.Controls.Scene;assembly=WpfControlsLib">
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
+        <!-- VERTEX DRAGGING CONTROL -->
+        <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
+        <Setter Property="controls:DragBehaviour.UpdateEdgesOnMove" Value="True" />
         <Setter Property="Background" Value="{Binding Color}"/>
         <Setter Property="VertexShape" Value="None"/>
         <Setter Property= "ShowLabel" Value="True"/>
-        <Setter Property="Template">
+        <!--<Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:VertexControl}">
                     <Grid>
-                        <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                        <Border BorderThickness="4"
+                            BorderBrush="{Binding BorderColor}"
+                            CornerRadius="14">
+                            <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill">
+                            </Image>
+                        </Border>
                         <controls:VertexLabelControl 
                             x:Name="PART_vertexLabel" 
                             Content="{Binding Name}" 
@@ -36,11 +45,43 @@
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
+        </Setter>-->
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding IsVirtual}" Value="true">
+                <Setter Property="VertexShape" Value="None"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type controls:VertexControl}">
+                            <Grid>
+                                <Border BorderBrush="Black" BorderThickness="1">
+                                    <Rectangle Margin="0" Width="3pt" Height="3pt" Visibility="Visible" Fill="{Binding Color}"/>
+                                </Border>
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
 
-        <!-- VERTEX DRAGGING CONTROL -->
-        <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
-        <Setter Property="controls:DragBehaviour.UpdateEdgesOnMove" Value="True" />
+            <DataTrigger Binding="{Binding IsVirtual}" Value="false">
+                <Setter Property="Background" Value="{Binding Color}"/>
+                <Setter Property="VertexShape" Value="None"/>
+                <Setter Property= "ShowLabel" Value="True"/>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type controls:VertexControl}">
+                            <Grid>
+                                <Image Source="{Binding Picture}" Margin="0" Width="80" Stretch="UniformToFill"/>
+                                <controls:VertexLabelControl 
+                                x:Name="PART_vertexLabel" 
+                                Content="{Binding Name}" 
+                                LabelPositionSide="Bottom" 
+                                FontFamily="Lucida Sans Regular" />
+                            </Grid>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+        </Style.Triggers>
     </Style>
 
     <ControlTemplate x:Key="GeneralizationEdge" TargetType="{x:Type controls:EdgeControl}">
@@ -75,7 +116,7 @@
 
     <ControlTemplate x:Key="AssociationEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
-            <Path Stroke="Blue"
+            <Path Stroke="{Binding Color}"
                 StrokeThickness="2"
                 ToolTip="{TemplateBinding ToolTip}" 
                 x:Name="PART_edgePath"/>
@@ -159,7 +200,6 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
-
 </ResourceDictionary>
 
 
