-started expression parser

--- a/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
+++ b/src/WpfControlsLib/Controls/Toolbar/ToolbarView.xaml
@@ -27,6 +27,7 @@
     
     <Grid>
         <Grid.Resources>
+            <!-- Style for buttons on toolbar -->
             <Style TargetType="Button">
                 <Style.Resources>
                     <Style TargetType="Image">
