-performer scene: robot & refactor

--- a/src/Performers/PerformersScene/App.xaml
+++ b/src/Performers/PerformersScene/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="LogoScene.App"
+﻿<Application x:Class="PerformersScene.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:LogoScene"
+             xmlns:local="clr-namespace:PerformersScene"
              StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
