--- a/src/Performers/PerformersScene/Controls/DrawingScene.xaml
+++ b/src/Performers/PerformersScene/Controls/DrawingScene.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="LogoScene.Controls.DrawingScene"
+﻿<UserControl x:Class="PerformersScene.Controls.DrawingScene"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:LogoScene.Controls"
-             xmlns:controls="clr-namespace:LogoScene.Controls"
-             xmlns:viewmodels="clr-namespace:LogoScene.ViewModels"
+             xmlns:local="clr-namespace:PerformersScene.Controls"
+             xmlns:controls="clr-namespace:PerformersScene.Controls"
+             xmlns:viewmodels="clr-namespace:PerformersScene.ViewModels"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:converters="clr-namespace:LogoScene.Controls.Converters"
+             xmlns:converters="clr-namespace:PerformersScene.Controls.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.DataContext>
