--- a/src/Performers/PerformersScene/Controls/TurtleControl.xaml
+++ b/src/Performers/PerformersScene/Controls/TurtleControl.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="LogoScene.Controls.TurtleControl"
+﻿<UserControl x:Class="PerformersScene.Controls.TurtleControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:LogoScene.Controls"
-             xmlns:viewmodels="clr-namespace:LogoScene.ViewModels"
+             xmlns:local="clr-namespace:PerformersScene.Controls"
+             xmlns:viewmodels="clr-namespace:PerformersScene.ViewModels"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             xmlns:converters="clr-namespace:LogoScene.Controls.Converters"
+             xmlns:converters="clr-namespace:PerformersScene.Controls.Converters"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              mc:Ignorable="d" 
